--- a/Framework/20_ProcessDownTimeInTheBeginning.xaml
+++ b/Framework/20_ProcessDownTimeInTheBeginning.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_str_QueueName" Type="InArgument(x:String)" />
     <x:Property Name="io_ProcessSetup" Type="InOutArgument(hm:ProcessSetup)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1410.4,610.4</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>390,109.8</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="32">
@@ -44,72 +44,74 @@
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
     <scg:List x:TypeArguments="AssemblyReference" Capacity="128">
-      <AssemblyReference>System.Activities</AssemblyReference>
-      <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
-      <AssemblyReference>mscorlib</AssemblyReference>
-      <AssemblyReference>System.Data</AssemblyReference>
-      <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
-      <AssemblyReference>System</AssemblyReference>
-      <AssemblyReference>System.Drawing</AssemblyReference>
-      <AssemblyReference>System.Core</AssemblyReference>
-      <AssemblyReference>System.Xml</AssemblyReference>
-      <AssemblyReference>System.Xml.Linq</AssemblyReference>
-      <AssemblyReference>PresentationFramework</AssemblyReference>
-      <AssemblyReference>WindowsBase</AssemblyReference>
-      <AssemblyReference>PresentationCore</AssemblyReference>
-      <AssemblyReference>System.Xaml</AssemblyReference>
-      <AssemblyReference>UiPath.System.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
-      <AssemblyReference>HMS.Team.Framework.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
-      <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.Mail.Activities</AssemblyReference>
-      <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
-      <AssemblyReference>System.ValueTuple</AssemblyReference>
-      <AssemblyReference>System.Memory</AssemblyReference>
-      <AssemblyReference>System.ServiceModel</AssemblyReference>
-      <AssemblyReference>UiPath.Excel</AssemblyReference>
-      <AssemblyReference>UiPath.Mail</AssemblyReference>
-      <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
-      <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
-      <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
-      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Collections.Immutable</AssemblyReference>
-      <AssemblyReference>HmsTeam.Framework.Activities</AssemblyReference>
       <AssemblyReference>FilterExchangeEmails</AssemblyReference>
-      <AssemblyReference>UiPath.Platform</AssemblyReference>
-      <AssemblyReference>Newtonsoft.Json</AssemblyReference>
-      <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
-      <AssemblyReference>Microsoft.Activities.Extensions</AssemblyReference>
-      <AssemblyReference>UiPath.Web</AssemblyReference>
-      <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_19063519</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_45005656</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_51641620</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_57749435</AssemblyReference>
-      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_14274485</AssemblyReference>
-      <AssemblyReference>OrchestratorAPI</AssemblyReference>
+      <AssemblyReference>HMS.Team.Framework.Activities</AssemblyReference>
       <AssemblyReference>HmsTeam.Files.Activities</AssemblyReference>
       <AssemblyReference>HmsTeam.Files.Activities_Expressions_11424440</AssemblyReference>
       <AssemblyReference>HmsTeam.Files.Activities_Expressions_19815875</AssemblyReference>
+      <AssemblyReference>HmsTeam.Framework.Activities</AssemblyReference>
+      <AssemblyReference>HmsTeam.General.Activities</AssemblyReference>
+      <AssemblyReference>HmsTeam.General.Activities_Expressions_23219884</AssemblyReference>
       <AssemblyReference>HmsTeam.General.Activities_Expressions_31232736</AssemblyReference>
       <AssemblyReference>HmsTeam.General.Activities_Expressions_32787320</AssemblyReference>
       <AssemblyReference>HmsTeam.General.Activities_Expressions_39047066</AssemblyReference>
-      <AssemblyReference>HmsTeam.General.Activities</AssemblyReference>
-      <AssemblyReference>HmsTeam.General.Activities_Expressions_23219884</AssemblyReference>
-      <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_20314447</AssemblyReference>
       <AssemblyReference>HmsTeam.OrchestratorAPI.Activities</AssemblyReference>
-      <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_21963067</AssemblyReference>
       <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_18439440</AssemblyReference>
       <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_19931876</AssemblyReference>
+      <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_20314447</AssemblyReference>
+      <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_21963067</AssemblyReference>
       <AssemblyReference>HmsTeam.OrchestratorAPI.Activities_Expressions_7980335</AssemblyReference>
-      <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
-      <AssemblyReference>System.ServiceModel.Activities</AssemblyReference>
-      <AssemblyReference>Modeling</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_14274485</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_19063519</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_45005656</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_51641620</AssemblyReference>
+      <AssemblyReference>HmsTeam.Swagger.Activities_Expressions_57749435</AssemblyReference>
       <AssemblyReference>HmsTeam.UiPath.Shared</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
+      <AssemblyReference>Microsoft.Activities.Extensions</AssemblyReference>
+      <AssemblyReference>Microsoft.Bcl.AsyncInterfaces</AssemblyReference>
+      <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
+      <AssemblyReference>Modeling</AssemblyReference>
+      <AssemblyReference>mscorlib</AssemblyReference>
+      <AssemblyReference>Newtonsoft.Json</AssemblyReference>
+      <AssemblyReference>OrchestratorAPI</AssemblyReference>
+      <AssemblyReference>PresentationCore</AssemblyReference>
+      <AssemblyReference>PresentationFramework</AssemblyReference>
+      <AssemblyReference>System</AssemblyReference>
+      <AssemblyReference>System.Activities</AssemblyReference>
+      <AssemblyReference>System.Collections.Immutable</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.Composition</AssemblyReference>
+      <AssemblyReference>System.ComponentModel.TypeConverter</AssemblyReference>
+      <AssemblyReference>System.Core</AssemblyReference>
+      <AssemblyReference>System.Data</AssemblyReference>
+      <AssemblyReference>System.Data.DataSetExtensions</AssemblyReference>
+      <AssemblyReference>System.Drawing</AssemblyReference>
+      <AssemblyReference>System.Linq</AssemblyReference>
+      <AssemblyReference>System.Memory</AssemblyReference>
+      <AssemblyReference>System.ObjectModel</AssemblyReference>
+      <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
+      <AssemblyReference>System.ServiceModel</AssemblyReference>
+      <AssemblyReference>System.ServiceModel.Activities</AssemblyReference>
+      <AssemblyReference>System.ValueTuple</AssemblyReference>
+      <AssemblyReference>System.Xaml</AssemblyReference>
+      <AssemblyReference>System.Xml</AssemblyReference>
+      <AssemblyReference>System.Xml.Linq</AssemblyReference>
+      <AssemblyReference>UiPath.Excel</AssemblyReference>
+      <AssemblyReference>UiPath.Excel.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>UiPath.Mail.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
+      <AssemblyReference>UiPath.Platform</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
+      <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationNext</AssemblyReference>
+      <AssemblyReference>UiPath.UIAutomationNext.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.Web</AssemblyReference>
+      <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
+      <AssemblyReference>WindowsBase</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="Seq_ProcessDownTimeInTheBeginning" sap:VirtualizedContainerService.HintSize="200,84.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
